made-deployment/Infrastructure/Istio/istioGateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: teastore-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: TCP
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teastorevs
spec:
  hosts:
  - "*"
  gateways:
  - teastore-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /products
    route:
    - destination:
        host: teastore-webui
        port:
          number: 8080
